z-index fix

--- a/style.css
+++ b/style.css
@@ -300,7 +300,7 @@ h3 {
 	left:50%;
 	width:100px;
 	height:20px;
-	z-index:10000!important;
+	z-index:10!important;
 	position: relative;
 }
 
