--- a/style2.css
+++ b/style2.css
@@ -337,7 +337,7 @@ h4 {
 	left:50%;
 	width:100px;
 	height:20px;
-	z-index:10000!important;
+	z-index:10!important;
 	position: relative;
 }
 
